# QtAwesome

./: CMakeLists.txt
QtAwesome/: CMakeLists.txt  QtAwesome.pri  faiconprovider.cpp  faiconprovider.h
